<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:weightSum="20"
                  android:layout_weight="10"
                  android:orientation="vertical" android:layout_height="0dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:text="@string/accx_gyrox"
                android:id="@+id/ac_datax"
                android:gravity="center"

        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:text="@string/accy_gyroy"
                android:layout_weight="2"
                android:gravity="center"
                android:id="@+id/ac_datay"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:layout_height="0dp"
                android:text="accZ ::: gyroZ"
                android:id="@+id/ac_dataz"
        />
        <Button
                android:text="@string/start"
                android:onClick="start2"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="120dp"
                android:layout_height="wrap_content" android:id="@+id/start"/>
        <Button
                android:text="@string/stop"
                android:layout_marginStart="120dp"
                android:onClick="stop2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/stop"/>
        <Button
                android:text="@string/table"

                android:layout_width="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_height="wrap_content" android:id="@+id/act"/>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/invalid"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:layout_height="0dp"
            android:text="@string/test"

    />
    <EditText
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="40sp"
            android:layout_height="0dp"
            android:text="@string/_0"
            android:inputType="numberSigned"
            android:id="@+id/tests"
    />
</LinearLayout>